[gd_scene load_steps=10 format=3 uid="uid://be6gq71pbym1n"]

[ext_resource type="Script" path="res://Agents/Sage/Sage_Wall.gd" id="1_axwj0"]
[ext_resource type="Material" uid="uid://bkby4dtbqlcg5" path="res://Materials/AgentSpecific/Sage/SageIndicator.tres" id="2_hgiye"]
[ext_resource type="Material" uid="uid://llxew2w8eohy" path="res://Materials/AgentSpecific/Sage/SageWall.tres" id="3_vt0om"]

[sub_resource type="BoxMesh" id="BoxMesh_ox6db"]
material = ExtResource("3_vt0om")
size = Vector3(2, 2, 2)

[sub_resource type="BoxShape3D" id="BoxShape3D_uyclg"]
size = Vector3(2, 2, 2)

[sub_resource type="BoxMesh" id="BoxMesh_6dqnl"]
material = ExtResource("2_hgiye")
size = Vector3(8, 0.2, 2)

[sub_resource type="Animation" id="Animation_1dhmu"]
resource_name = "Create"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Wall_Container:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 2, 0)]
}

[sub_resource type="Animation" id="Animation_qfj2a"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Wall_Container:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pf2vj"]
_data = {
"Create": SubResource("Animation_1dhmu"),
"RESET": SubResource("Animation_qfj2a")
}

[node name="Sage_Wall" type="Node3D"]
script = ExtResource("1_axwj0")

[node name="Wall_Container" type="Node3D" parent="."]

[node name="Wall_Chunk_1" type="StaticBody3D" parent="Wall_Container" groups=["SageWall"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, -1, 0)

[node name="MeshInstance3d" type="MeshInstance3D" parent="Wall_Container/Wall_Chunk_1"]
mesh = SubResource("BoxMesh_ox6db")

[node name="col" type="CollisionShape3D" parent="Wall_Container/Wall_Chunk_1"]
shape = SubResource("BoxShape3D_uyclg")

[node name="Wall_Chunk_2" type="StaticBody3D" parent="Wall_Container" groups=["SageWall"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, -1, 0)

[node name="MeshInstance3d" type="MeshInstance3D" parent="Wall_Container/Wall_Chunk_2"]
mesh = SubResource("BoxMesh_ox6db")

[node name="col" type="CollisionShape3D" parent="Wall_Container/Wall_Chunk_2"]
shape = SubResource("BoxShape3D_uyclg")

[node name="Wall_Chunk_3" type="StaticBody3D" parent="Wall_Container" groups=["SageWall"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, -1, 0)

[node name="MeshInstance3d" type="MeshInstance3D" parent="Wall_Container/Wall_Chunk_3"]
mesh = SubResource("BoxMesh_ox6db")

[node name="col" type="CollisionShape3D" parent="Wall_Container/Wall_Chunk_3"]
shape = SubResource("BoxShape3D_uyclg")

[node name="Wall_Chunk_4" type="StaticBody3D" parent="Wall_Container" groups=["SageWall"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, -1, 0)

[node name="MeshInstance3d" type="MeshInstance3D" parent="Wall_Container/Wall_Chunk_4"]
mesh = SubResource("BoxMesh_ox6db")

[node name="col" type="CollisionShape3D" parent="Wall_Container/Wall_Chunk_4"]
shape = SubResource("BoxShape3D_uyclg")

[node name="Indicator" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, 0)
mesh = SubResource("BoxMesh_6dqnl")

[node name="OmniLight3d" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 0)
light_color = Color(0, 1, 0.623529, 1)
light_energy = 3.0
omni_range = 12.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_pf2vj")
}

[node name="Timer" type="Timer" parent="."]
wait_time = 6.0

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
